# ws_offboard_control

./: .gitignore  reset_time.txt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/comp/lib/comp/: comp_routine
install/comp/share/comp/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/comp_routine/lib/comp_routine/: comp_routine
install/comp_routine/share/comp_routine/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/comp_routine/share/comp_routine/cmake/: comp_routineConfig-version.cmake  comp_routineConfig.cmake
install/comp_routine/share/comp_routine/environment/: ament_prefix_path.dsv  path.dsv
install/orb_slam3_rb5_ros2/share/orb_slam3_rb5_ros2/: package.bash  package.zsh
install/px4_msgs/include/px4_msgs/msg/: action_request.h  action_request.hpp  actuator_armed.h  actuator_armed.hpp  actuator_controls_status.h  actuator_controls_status.hpp  actuator_motors.h  actuator_motors.hpp  actuator_outputs.h  actuator_outputs.hpp  actuator_servos.h  actuator_servos.hpp  actuator_servos_trim.h  actuator_servos_trim.hpp  actuator_test.h  actuator_test.hpp  adc_report.h  adc_report.hpp  airspeed.h  airspeed.hpp  airspeed_validated.h  airspeed_validated.hpp  airspeed_wind.h  airspeed_wind.hpp  arming_check_reply.h  arming_check_reply.hpp  arming_check_request.h  arming_check_request.hpp  autotune_attitude_control_status.h  autotune_attitude_control_status.hpp  battery_status.h  battery_status.hpp  buffer128.h  buffer128.hpp  button_event.h  button_event.hpp  camera_capture.h  camera_capture.hpp  camera_status.h  camera_status.hpp  (+395 more)
install/px4_msgs/include/px4_msgs/srv/: vehicle_command.h  vehicle_command.hpp
install/px4_msgs/share/px4_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/px4_msgs/share/px4_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_libraries-extras.cmake  (+14 more)
install/px4_ros_com/include/px4_ros_com/: frame_transforms.h
install/px4_ros_com/lib/px4_ros_com/: debug_vect_advertiser  offboard_control  offboard_control.py  offboard_control_srv  sensor_combined_listener  vehicle_gps_position_listener
install/px4_ros_com/share/px4_ros_com/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
install/rb5_ros2_control/lib/rb5_ros2_control/: rb5_ros2_control_node
install/rb5_ros2_control/share/rb5_ros2_control/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/rb5_ros2_vision/lib/rb5_ros2_vision/: rb_camera_ocv_node
install/rb5_ros2_vision/share/rb5_ros2_vision/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ros2_april_detection/share/ros2_april_detection/: package.bash  package.zsh
log/: latest_build
src/buoy_detector/: CMakeLists.txt  package.xml
src/buoy_detector/launch/: all_in_one.launch.py
src/buoy_detector/src/: buoy_detector.cpp
src/comp/: CMakeLists.txt  package.xml
src/comp/src/: comp.cpp
src/comp_routine/: CMakeLists.txt  package.xml
src/comp_routine/config/: params.yaml
src/comp_routine/launch/: just_vision.launch.py  run.launch.py
src/comp_routine/src/: comp_routine.cpp
src/image_processing/: CMakeLists.txt  package.xml
src/image_processing/src/: image_processing_node.cpp
src/image_saver/: CMakeLists.txt  package.xml
src/image_saver/src/: image_saver.cpp
(+2909 files in other folders)
